--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -8,13 +8,11 @@ on:
 
 jobs:
   laravel-tests:
-
     runs-on: ubuntu-latest
-    
     steps:
-    - name: SonarQube Scan
-    - uses: kitabisa/sonarqube-action@v0.0.1
     - uses: actions/checkout@v2
+    - name: SonarQube Scan
+      uses: kitabisa/sonarqube-action@v0.0.1
     - name: Copy .env
       run: php -r "file_exists('.env') || copy('.env.example', '.env');"
     - name: Install Dependencies
